--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,13 @@ article,section,aside{
     box-shadow: 10px 10px 5px #888888;
 
 }
+
+.headIng {
+    color: green;
+    font-weight: 900;
+    font-size: 1.8em;
+}
+
 header{
     text-align: center;
 }
